// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginMainBody > className is added to the root element 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-login__main-body extra-class"
  />
</DocumentFragment>
`;

exports[`LoginMainBody > renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-login__main-body"
  />
</DocumentFragment>
`;
